// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visio export — golden structural snapshots > expanded subprocess with internals 1`] = `
{
  "byId": [
    {
      "geom": {
        "h": 2.4,
        "w": 9.02,
        "x": 5.85,
        "y": 4.14,
      },
      "id": "_default_pool",
      "master": "300",
      "nameU": "Process",
      "type": "pool",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.73,
        "x": 4.43,
        "y": 3.87,
      },
      "id": "conn-is-it",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.73,
        "x": 6.22,
        "y": 3.87,
      },
      "id": "conn-it-ien",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": -0.4,
        "w": 0.73,
        "x": 3.01,
        "y": 4.1,
      },
      "id": "conn-s-sp",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0.4,
        "w": 0.71,
        "x": 9.11,
        "y": 4.1,
      },
      "id": "conn-sp-e",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 9.65,
        "y": 4.29,
      },
      "id": "e",
      "master": "1002",
      "nameU": "End",
      "type": "end-event",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 6.77,
        "y": 3.87,
      },
      "id": "ien",
      "master": "1005",
      "nameU": "end-event",
      "type": "end-event",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 3.88,
        "y": 3.87,
      },
      "id": "is",
      "master": "1003",
      "nameU": "start-event",
      "type": "start-event",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 5.32,
        "y": 3.87,
      },
      "id": "it",
      "master": "1004",
      "nameU": "Assess",
      "type": "task",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 2.46,
        "y": 4.29,
      },
      "id": "s",
      "master": "1000",
      "nameU": "Start",
      "type": "start-event",
    },
    {
      "geom": {
        "h": 1.36,
        "w": 5.38,
        "x": 6.06,
        "y": 3.9,
      },
      "id": "sp",
      "master": "1001",
      "nameU": "Handle claim",
      "type": "subprocess-expanded",
    },
  ],
  "summary": {
    "masters": [
      "1000",
      "1001",
      "1002",
      "1003",
      "1004",
      "1005",
      "111",
      "300",
    ],
    "subShapes": 92,
    "taggedShapes": 11,
    "totalShapes": 103,
  },
}
`;

exports[`Visio export — golden structural snapshots > linear flow 1`] = `
{
  "byId": [
    {
      "geom": {
        "h": 2.08,
        "w": 6.83,
        "x": 5.85,
        "y": 4.14,
      },
      "id": "_default_pool",
      "master": "300",
      "nameU": "Process",
      "type": "pool",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.73,
        "x": 4.11,
        "y": 4.14,
      },
      "id": "conn-s-t1",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0,
        "w": 1.17,
        "x": 6.12,
        "y": 4.14,
      },
      "id": "conn-t1-t2",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.6,
        "x": 8.06,
        "y": 4.14,
      },
      "id": "conn-t2-e",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 8.55,
        "y": 4.14,
      },
      "id": "e",
      "master": "1003",
      "nameU": "Done",
      "type": "end-event",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 3.55,
        "y": 4.14,
      },
      "id": "s",
      "master": "1000",
      "nameU": "Start",
      "type": "start-event",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 5,
        "y": 4.14,
      },
      "id": "t1",
      "master": "1001",
      "nameU": "Receive order",
      "type": "task",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 7.23,
        "y": 4.14,
      },
      "id": "t2",
      "master": "1002",
      "nameU": "Ship order",
      "type": "task",
    },
  ],
  "summary": {
    "masters": [
      "1000",
      "1001",
      "1002",
      "1003",
      "111",
      "300",
    ],
    "subShapes": 68,
    "taggedShapes": 8,
    "totalShapes": 76,
  },
}
`;

exports[`Visio export — golden structural snapshots > pool with two lanes 1`] = `
{
  "byId": [
    {
      "geom": {
        "h": 0,
        "w": 0.73,
        "x": 4.29,
        "y": 5.15,
      },
      "id": "conn-s-t1",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": -1.68,
        "w": 0.98,
        "x": 6.21,
        "y": 4.31,
      },
      "id": "conn-t1-t2",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.6,
        "x": 8.06,
        "y": 3.47,
      },
      "id": "conn-t2-e",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 8.55,
        "y": 3.47,
      },
      "id": "e",
      "master": "1003",
      "nameU": "End",
      "type": "end-event",
    },
    {
      "geom": {
        "h": 1.89,
        "w": 6.46,
        "x": 6.03,
        "y": 5.25,
      },
      "id": "l1",
      "master": "400",
      "nameU": "Sales",
      "type": "lane",
    },
    {
      "geom": {
        "h": 2.23,
        "w": 6.46,
        "x": 6.03,
        "y": 3.19,
      },
      "id": "l2",
      "master": "700",
      "nameU": "Warehouse",
      "type": "lane",
    },
    {
      "geom": {
        "h": 4.11,
        "w": 6.83,
        "x": 5.85,
        "y": 4.14,
      },
      "id": "p",
      "master": "300",
      "nameU": "Order Process",
      "type": "pool",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 3.74,
        "y": 5.15,
      },
      "id": "s",
      "master": "1000",
      "nameU": "Start",
      "type": "start-event",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 5.19,
        "y": 5.15,
      },
      "id": "t1",
      "master": "1001",
      "nameU": "Take order",
      "type": "task",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 7.23,
        "y": 3.47,
      },
      "id": "t2",
      "master": "1002",
      "nameU": "Pick goods",
      "type": "task",
    },
  ],
  "summary": {
    "masters": [
      "1000",
      "1001",
      "1002",
      "1003",
      "111",
      "300",
      "400",
      "700",
    ],
    "subShapes": 68,
    "taggedShapes": 10,
    "totalShapes": 78,
  },
}
`;
